capNhatCode